--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ find_package(jsoncpp CONFIG REQUIRED)
 include_directories(distributions)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
-add_executable(DRLCPP main.cpp algorithms/VPG.h algorithms/VPG.cpp utility/categorical.h utility/categorical.cpp utility/distribution.h utility/distribution.cpp Experimental/CartPoleEnv.h Experimental/Discrete.h algorithms/DQN.h algorithms/DQN.cpp Experimental/Env.h models/FCQ.h algorithms/NFQ.h algorithms/NFQ.cpp buffers/ReplayBuffer.h buffers/ReplayBuffer.cpp Experimental/Space.h utility/Strategy.h utility/utils.h buffers/PrioritizedReplayBuffer.cpp buffers/PrioritizedReplayBuffer.h Experimental/OpenAIGymWrapper.h Experimental/ALEWrapper.h tests/TestALEWrapper.cpp models/AtariCNN.h models/Model.h models/FCDP.h algorithms/REINFORCE.cpp algorithms/REINFORCE.h models/FCV.h)
+# algorithms/PPO.cpp algorithms/PPO.h
+add_executable(DRLCPP main.cpp algorithms/VPG.h algorithms/VPG.cpp utility/categorical.h utility/categorical.cpp utility/distribution.h utility/distribution.cpp Experimental/CartPoleEnv.h Experimental/Discrete.h algorithms/DQN.h algorithms/DQN.cpp Experimental/Env.h models/FCQ.h algorithms/NFQ.h algorithms/NFQ.cpp buffers/ReplayBuffer.h buffers/ReplayBuffer.cpp Experimental/Space.h utility/Strategy.h utility/utils.h buffers/PrioritizedReplayBuffer.cpp buffers/PrioritizedReplayBuffer.h Experimental/OpenAIGymWrapper.h Experimental/ALEWrapper.h tests/TestALEWrapper.cpp models/AtariCNN.h models/Model.h models/FCDP.h algorithms/REINFORCE.cpp algorithms/REINFORCE.h models/FCV.h models/FCAC.h Experimental/MultiprocessGymEnv.h algorithms/A2C.cpp algorithms/A2C.h )
 target_link_libraries(DRLCPP  ${OpenCV_LIBS}  ${LIBALE} "${TORCH_LIBRARIES}" CURL::libcurl jsoncpp_lib )
 set_property(TARGET DRLCPP PROPERTY CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
